--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <!-- Modelos de Pulpo -->
         <a-asset-item id="OctopusModel1" src="./Octopus.glb"></a-asset-item>
-        <a-asset-item id="OctopusModel2" src="./Octopus2.glb"></a-asset-item>
+        <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
       </a-assets>
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
@@ -333,6 +333,7 @@
     </script>
   </body>
 </html>
+
 
 
 
