--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         max-width: 400px;
         display: none;
       }
-
       #menu button {
         margin: 5px;
         padding: 8px 15px;
@@ -32,17 +31,13 @@
         font-weight: bold;
         cursor: pointer;
       }
-
       #menu button:hover {
         background: #4682b4;
       }
-
       #fact-box {
         margin-top: 10px;
         font-size: 14px;
       }
-
-      /* Mensaje de búsqueda */
       #scan-message {
         position: fixed;
         top: 20px;
@@ -56,15 +51,12 @@
         z-index: 1000;
         text-align: center;
       }
-
       #scan-message img {
         display: block;
         margin: 10px auto 0 auto;
         max-width: 150px;
         border-radius: 8px;
       }
-
-      /* Botones de control */
       #controls {
         position: fixed;
         bottom: 125px;
@@ -74,7 +66,6 @@
         display: flex;
         gap: 10px;
       }
-
       #controls button {
         padding: 6px 12px;
         border: none;
@@ -83,8 +74,6 @@
         color: white;
         cursor: pointer;
       }
-
-      /* Botones de cambio de modelo */
       #model-switch {
         position: fixed;
         bottom: 200px;
@@ -94,7 +83,6 @@
         display: none;
         gap: 10px;
       }
-
       #model-switch button {
         padding: 6px 12px;
         border: none;
@@ -106,7 +94,7 @@
     </style>
   </head>
   <body>
-    <!-- MENSAJE ESCANEAR -->
+    <!-- Mensaje escanear -->
     <div id="scan-message">
       Apunta tu cámara hacia las imágenes para comenzar
       <img id="scan-image" src="./target1.png" alt="Target a escanear">
@@ -128,7 +116,7 @@
       <button id="btnStop">⏹ Stop</button>
     </div>
 
-    <!-- Controles de cambio de modelo -->
+    <!-- Botones de cambio de modelo -->
     <div id="model-switch"></div>
 
     <!-- Escena AR -->
@@ -140,11 +128,10 @@
       device-orientation-permission-ui="enabled: false"
     >
       <a-assets>
-        <!-- Modelos de Ballena -->
+        <!-- Modelos Ballena -->
         <a-asset-item id="WhaleModel1" src="./WhaleO1.glb"></a-asset-item>
         <a-asset-item id="WhaleModel2" src="./WhaleO2.glb"></a-asset-item>
-
-        <!-- Modelos de Pulpo -->
+        <!-- Modelos Pulpo -->
         <a-asset-item id="OctopusModel1" src="./Octopus.glb"></a-asset-item>
         <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
       </a-assets>
@@ -153,24 +140,38 @@
 
       <!-- Ballena -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
-        <a-gltf-model
-          id="whale-model"
-          src="#WhaleModel1"
-          position="0 0 0"
-          scale="0.7 0.7 0.7"
-          rotation="0 0 0"
-        ></a-gltf-model>
+        <a-entity id="ballenaModel1"
+                  gltf-model="#WhaleModel1"
+                  position="0 0 0"
+                  rotation="0 0 0"
+                  scale="0.7 0.7 0.7"
+                  visible="true">
+        </a-entity>
+        <a-entity id="ballenaModel2"
+                  gltf-model="#WhaleModel2"
+                  position="0 0 0"
+                  rotation="0 0 0"
+                  scale="0.7 0.7 0.7"
+                  visible="false">
+        </a-entity>
       </a-entity>
 
       <!-- Pulpo -->
       <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
-        <a-gltf-model
-          id="octopus-model"
-          src="#OctopusModel1"
-          position="0 -0.25 0"
-          scale="0.05 0.05 0.05"
-          rotation="0 0 0"
-        ></a-gltf-model>
+        <a-entity id="pulpoModel1"
+                  gltf-model="#OctopusModel1"
+                  position="0 -0.25 0"
+                  rotation="0 0 0"
+                  scale="0.05 0.05 0.05"
+                  visible="true">
+        </a-entity>
+        <a-entity id="pulpoModel2"
+                  gltf-model="#OctopusModel2"
+                  position="0 -0.25 0"
+                  rotation="0 0 0"
+                  scale="0.05 0.05 0.05"
+                  visible="false">
+        </a-entity>
       </a-entity>
     </a-scene>
 
@@ -180,8 +181,14 @@
       const scanMessage = document.querySelector("#scan-message");
       const modelSwitch = document.querySelector("#model-switch");
 
-      const whaleModel = document.querySelector("#whale-model");
-      const octopusModel = document.querySelector("#octopus-model");
+      const whaleModels = [
+        document.querySelector("#ballenaModel1"),
+        document.querySelector("#ballenaModel2")
+      ];
+      const octopusModels = [
+        document.querySelector("#pulpoModel1"),
+        document.querySelector("#pulpoModel2")
+      ];
 
       const facts = {
         whale: [
@@ -201,12 +208,6 @@
       let whaleDetected = false;
       let octopusDetected = false;
 
-      // Escalas predefinidas
-      const modelScales = {
-        whale: "0.7 0.7 0.7",
-        octopus: "0.05 0.05 0.05"
-      };
-
       function showFact() {
         if (currentAnimal) {
           factBox.innerText = facts[currentAnimal][factIndex];
@@ -221,14 +222,14 @@
           // Mostrar botones según target
           if (whaleDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="changeWhale('#WhaleModel1')">Ballena 1</button>
-              <button onclick="changeWhale('#WhaleModel2')">Ballena 2</button>
+              <button onclick="switchWhaleModel(0)">Ballena 1</button>
+              <button onclick="switchWhaleModel(1)">Ballena 2</button>
             `;
             modelSwitch.style.display = "flex";
           } else if (octopusDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="changeOctopus('#OctopusModel1')">Pulpo 1</button>
-              <button onclick="changeOctopus('#OctopusModel2')">Pulpo 2</button>
+              <button onclick="switchOctopusModel(0)">Pulpo 1</button>
+              <button onclick="switchOctopusModel(1)">Pulpo 2</button>
             `;
             modelSwitch.style.display = "flex";
           }
@@ -241,26 +242,16 @@
         }
       }
 
-      // Cambios de modelo con recarga forzada
-      window.changeWhale = (src) => {
-        whaleModel.removeAttribute("gltf-model");
-        setTimeout(() => {
-          whaleModel.setAttribute("gltf-model", src);
-          whaleModel.setAttribute("scale", modelScales.whale);
-        }, 50);
+      // Funciones para cambiar modelos
+      window.switchWhaleModel = (index) => {
+        whaleModels.forEach((m, i) => m.setAttribute("visible", i === index));
       };
-
-      window.changeOctopus = (src) => {
-        octopusModel.removeAttribute("gltf-model");
-        setTimeout(() => {
-          octopusModel.setAttribute("gltf-model", src);
-          octopusModel.setAttribute("scale", modelScales.octopus);
-        }, 50);
+      window.switchOctopusModel = (index) => {
+        octopusModels.forEach((m, i) => m.setAttribute("visible", i === index));
       };
 
       // Eventos detección ballena
       document.getElementById("target-whale").addEventListener("targetFound", () => {
-        console.log("Ballena detectada");
         whaleDetected = true;
         if (!octopusDetected) {
           currentAnimal = "whale";
@@ -270,14 +261,12 @@
         updateMenuVisibility();
       });
       document.getElementById("target-whale").addEventListener("targetLost", () => {
-        console.log("Ballena perdida");
         whaleDetected = false;
         updateMenuVisibility();
       });
 
       // Eventos detección pulpo
       document.getElementById("target-octopus").addEventListener("targetFound", () => {
-        console.log("Pulpo detectado");
         octopusDetected = true;
         if (!whaleDetected) {
           currentAnimal = "octopus";
@@ -287,7 +276,6 @@
         updateMenuVisibility();
       });
       document.getElementById("target-octopus").addEventListener("targetLost", () => {
-        console.log("Pulpo perdido");
         octopusDetected = false;
         updateMenuVisibility();
       });
@@ -318,32 +306,13 @@
       // Eventos A-FRAME globales
       const sceneEl = document.querySelector("a-scene");
       let arSystem;
-
       sceneEl.addEventListener("loaded", () => {
         arSystem = sceneEl.systems["mindar-image-system"];
       });
-
-      sceneEl.addEventListener("arReady", () => {
-        console.log("AR está listo ✅");
-      });
-
-      sceneEl.addEventListener("arError", (err) => {
-        console.error("Error en AR ❌", err);
-      });
+      sceneEl.addEventListener("arReady", () => { console.log("AR está listo ✅"); });
+      sceneEl.addEventListener("arError", (err) => { console.error("Error en AR ❌", err); });
 
       // Controles Start / Pause / Stop
-      document.querySelector("#btnStart").addEventListener("click", () => {
-        console.log("▶️ Iniciando AR");
-        arSystem.start();
-      });
-      document.querySelector("#btnPause").addEventListener("click", () => {
-        console.log("⏸ Pausando AR");
-        arSystem.pause();
-      });
-      document.querySelector("#btnStop").addEventListener("click", () => {
-        console.log("⏹ Deteniendo AR");
-        arSystem.stop();
-      });
-    </script>
-  </body>
-</html>
+      document.querySelector("#btnStart").addEventListener("click", () => arSystem.start());
+      document.querySelector("#btnPause").addEventListener("click", () => arSystem.pause());
+      document.querySelector("#btnStop").addEventListener("
