--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         max-width: 400px;
         display: none;
       }
-
       #menu button {
         margin: 5px;
         padding: 8px 15px;
@@ -32,87 +31,38 @@
         font-weight: bold;
         cursor: pointer;
       }
-
-      #menu button:hover {
-        background: #4682b4;
-      }
-
-      #fact-box {
-        margin-top: 10px;
-        font-size: 14px;
-      }
-
-      /* Mensaje de búsqueda */
+      #menu button:hover { background: #4682b4; }
+      #fact-box { margin-top: 10px; font-size: 14px; }
       #scan-message {
-        position: fixed;
-        top: 20px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: rgba(0, 0, 0, 0.75);
-        padding: 12px 18px;
-        border-radius: 12px;
-        color: white;
-        font-family: sans-serif;
-        z-index: 1000;
-        text-align: center;
+        position: fixed; top: 20px; left: 50%; transform: translateX(-50%);
+        background: rgba(0,0,0,0.75); padding: 12px 18px; border-radius: 12px;
+        color: white; font-family: sans-serif; z-index: 1000; text-align: center;
       }
-
-      #scan-message img {
-        display: block;
-        margin: 10px auto 0 auto;
-        max-width: 150px;
-        border-radius: 8px;
-      }
-
-      /* Botones de control */
+      #scan-message img { display: block; margin: 10px auto 0 auto; max-width: 150px; border-radius: 8px; }
       #controls {
-        position: fixed;
-        bottom: 125px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1000;
-        display: flex;
-        gap: 10px;
+        position: fixed; bottom: 125px; left: 50%; transform: translateX(-50%);
+        z-index: 1000; display: flex; gap: 10px;
       }
-
       #controls button {
-        padding: 6px 12px;
-        border: none;
-        border-radius: 8px;
-        background: #444;
-        color: white;
-        cursor: pointer;
+        padding: 6px 12px; border: none; border-radius: 8px; background: #444;
+        color: white; cursor: pointer;
       }
-
-      /* Botones de cambio de modelo */
       #model-switch {
-        position: fixed;
-        bottom: 200px;
-        left: 50%;
-        transform: translateX(-50%);
-        z-index: 1001;
-        display: none;
-        gap: 10px;
+        position: fixed; bottom: 200px; left: 50%; transform: translateX(-50%);
+        z-index: 1001; display: none; gap: 10px;
       }
-
       #model-switch button {
-        padding: 6px 12px;
-        border: none;
-        border-radius: 8px;
-        background: #28a745;
-        color: white;
-        cursor: pointer;
+        padding: 6px 12px; border: none; border-radius: 8px; background: #28a745;
+        color: white; cursor: pointer;
       }
     </style>
   </head>
   <body>
-    <!-- MENSAJE ESCANEAR -->
     <div id="scan-message">
       Apunta tu cámara hacia las imágenes para comenzar
-      <img id="scan-image" src="./target1.png" alt="Target a escanear">
+      <img id="scan-image" src="./Ballena3.png" alt="Target a escanear">
     </div>
 
-    <!-- Menú flotante -->
     <div id="menu">
       <div id="fact-box">Selecciona un animal para ver curiosidades</div>
       <div>
@@ -121,17 +71,14 @@
       </div>
     </div>
 
-    <!-- Controles AR -->
     <div id="controls">
       <button id="btnStart">▶️ Start</button>
       <button id="btnPause">⏸ Pause</button>
       <button id="btnStop">⏹ Stop</button>
     </div>
 
-    <!-- Controles de cambio de modelo -->
     <div id="model-switch"></div>
 
-    <!-- Escena AR -->
     <a-scene
       mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 2"
       color-space="sRGB"
@@ -140,11 +87,10 @@
       device-orientation-permission-ui="enabled: false"
     >
       <a-assets>
-        <!-- Modelos de Ballena -->
+        <!-- Ballenas -->
         <a-asset-item id="WhaleModel1" src="./WhaleO1.glb"></a-asset-item>
         <a-asset-item id="WhaleModel2" src="./WhaleO2.glb"></a-asset-item>
-
-        <!-- Modelos de Pulpo -->
+        <!-- Pulpos -->
         <a-asset-item id="OctopusModel1" src="./Octopus.glb"></a-asset-item>
         <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
       </a-assets>
@@ -153,24 +99,22 @@
 
       <!-- Ballena -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
-        <a-gltf-model
-          id="whale-model"
-          src="#WhaleModel1"
-          position="0 0 0"
-          scale="0.7 0.7 0.7"
-          rotation="0 0 0"
-        ></a-gltf-model>
+        <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" position="0 -0.3 0" rotation="0 90 0" scale="0.3 0.3 0.3" visible="true"
+          animation__updown="property: position; to: 0 0 0; dur:2000; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear"></a-entity>
+        <a-entity id="ballenaModel2" gltf-model="#WhaleModel2" position="0 -0.3 0" rotation="0 90 0" scale="0.3 0.3 0.3" visible="false"
+          animation__updown="property: position; to: 0 0 0; dur:2000; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear"></a-entity>
       </a-entity>
 
       <!-- Pulpo -->
       <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
-        <a-gltf-model
-          id="octopus-model"
-          src="#OctopusModel1"
-          position="0 -0.25 0"
-          scale="0.05 0.05 0.05"
-          rotation="0 0 0"
-        ></a-gltf-model>
+        <a-entity id="pulpoModel1" gltf-model="#OctopusModel1" position="0 -0.25 0" rotation="0 0 0" scale="0.05 0.05 0.05" visible="true"
+          animation__updown="property: position; to: 0 -0.05 0; dur:2500; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 360 0; dur:8000; loop:true; easing:linear"></a-entity>
+        <a-entity id="pulpoModel2" gltf-model="#OctopusModel2" position="0 -0.25 0" rotation="0 0 0" scale="0.05 0.05 0.05" visible="false"
+          animation__updown="property: position; to: 0 -0.05 0; dur:2500; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 360 0; dur:8000; loop:true; easing:linear"></a-entity>
       </a-entity>
     </a-scene>
 
@@ -180,8 +124,14 @@
       const scanMessage = document.querySelector("#scan-message");
       const modelSwitch = document.querySelector("#model-switch");
 
-      const whaleModel = document.querySelector("#whale-model");
-      const octopusModel = document.querySelector("#octopus-model");
+      const whaleModels = [
+        document.querySelector("#ballenaModel1"),
+        document.querySelector("#ballenaModel2")
+      ];
+      const octopusModels = [
+        document.querySelector("#pulpoModel1"),
+        document.querySelector("#pulpoModel2")
+      ];
 
       const facts = {
         whale: [
@@ -201,150 +151,66 @@
       let whaleDetected = false;
       let octopusDetected = false;
 
-      // Escalas predefinidas
-      const modelScales = {
-        whale: "0.7 0.7 0.7",
-        octopus: "0.05 0.05 0.05"
-      };
-
-      function showFact() {
-        if (currentAnimal) {
-          factBox.innerText = facts[currentAnimal][factIndex];
-        }
-      }
+      function showFact() { if(currentAnimal) factBox.innerText = facts[currentAnimal][factIndex]; }
 
       function updateMenuVisibility() {
         if ((whaleDetected && !octopusDetected) || (!whaleDetected && octopusDetected)) {
-          menu.style.display = "block";
-          scanMessage.style.display = "none";
-
-          // Mostrar botones según target
+          menu.style.display = "block"; scanMessage.style.display = "none";
           if (whaleDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="changeWhale('#WhaleModel1')">Ballena 1</button>
-              <button onclick="changeWhale('#WhaleModel2')">Ballena 2</button>
+              <button onclick="switchWhaleModel(0)">Ballena 1</button>
+              <button onclick="switchWhaleModel(1)">Ballena 2</button>
             `;
             modelSwitch.style.display = "flex";
           } else if (octopusDetected) {
             modelSwitch.innerHTML = `
-              <button onclick="changeOctopus('#OctopusModel1')">Pulpo 1</button>
-              <button onclick="changeOctopus('#OctopusModel2')">Pulpo 2</button>
+              <button onclick="switchOctopusModel(0)">Pulpo 1</button>
+              <button onclick="switchOctopusModel(1)">Pulpo 2</button>
             `;
             modelSwitch.style.display = "flex";
           }
-        } else {
-          menu.style.display = "none";
-          modelSwitch.style.display = "none";
-          if (!whaleDetected && !octopusDetected) {
-            scanMessage.style.display = "block";
-          }
-        }
+        } else { menu.style.display = "none"; modelSwitch.style.display = "none"; 
+          if(!whaleDetected && !octopusDetected) scanMessage.style.display = "block"; }
       }
 
-      // Cambios de modelo con recarga forzada
-      window.changeWhale = (src) => {
-        whaleModel.removeAttribute("gltf-model");
-        setTimeout(() => {
-          whaleModel.setAttribute("gltf-model", src);
-          whaleModel.setAttribute("scale", modelScales.whale);
-        }, 50);
-      };
+      window.switchWhaleModel = (index) => whaleModels.forEach((m,i)=>m.setAttribute("visible", i===index));
+      window.switchOctopusModel = (index) => octopusModels.forEach((m,i)=>m.setAttribute("visible", i===index));
 
-      window.changeOctopus = (src) => {
-        octopusModel.removeAttribute("gltf-model");
-        setTimeout(() => {
-          octopusModel.setAttribute("gltf-model", src);
-          octopusModel.setAttribute("scale", modelScales.octopus);
-        }, 50);
-      };
-
-      // Eventos detección ballena
-      document.getElementById("target-whale").addEventListener("targetFound", () => {
-        console.log("Ballena detectada");
-        whaleDetected = true;
-        if (!octopusDetected) {
-          currentAnimal = "whale";
-          factIndex = 0;
-          showFact();
-        }
+      document.getElementById("target-whale").addEventListener("targetFound", ()=>{
+        whaleDetected=true; if(!octopusDetected){currentAnimal="whale";factIndex=0;showFact();}
         updateMenuVisibility();
       });
-      document.getElementById("target-whale").addEventListener("targetLost", () => {
-        console.log("Ballena perdida");
-        whaleDetected = false;
+      document.getElementById("target-whale").addEventListener("targetLost", ()=>{
+        whaleDetected=false; updateMenuVisibility();
+      });
+      document.getElementById("target-octopus").addEventListener("targetFound", ()=>{
+        octopusDetected=true; if(!whaleDetected){currentAnimal="octopus";factIndex=0;showFact();}
         updateMenuVisibility();
       });
-
-      // Eventos detección pulpo
-      document.getElementById("target-octopus").addEventListener("targetFound", () => {
-        console.log("Pulpo detectado");
-        octopusDetected = true;
-        if (!whaleDetected) {
-          currentAnimal = "octopus";
-          factIndex = 0;
-          showFact();
-        }
-        updateMenuVisibility();
-      });
-      document.getElementById("target-octopus").addEventListener("targetLost", () => {
-        console.log("Pulpo perdido");
-        octopusDetected = false;
-        updateMenuVisibility();
+      document.getElementById("target-octopus").addEventListener("targetLost", ()=>{
+        octopusDetected=false; updateMenuVisibility();
       });
 
-      // Botones curiosidades
-      document.querySelector("#btnNext").addEventListener("click", () => {
-        if (currentAnimal) {
-          factIndex = (factIndex + 1) % facts[currentAnimal].length;
-          showFact();
-        }
+      document.querySelector("#btnNext").addEventListener("click", ()=>{
+        if(currentAnimal){ factIndex=(factIndex+1)%facts[currentAnimal].length; showFact(); }
       });
-      document.querySelector("#btnPrev").addEventListener("click", () => {
-        if (currentAnimal) {
-          factIndex = (factIndex - 1 + facts[currentAnimal].length) % facts[currentAnimal].length;
-          showFact();
-        }
+      document.querySelector("#btnPrev").addEventListener("click", ()=>{
+        if(currentAnimal){ factIndex=(factIndex-1+facts[currentAnimal].length)%facts[currentAnimal].length; showFact(); }
       });
 
-      // Rotación de imágenes en el mensaje
       const scanImage = document.querySelector("#scan-image");
-      const scanImages = ["./Ballena3.png", "./OctupusO3.png"];
-      let scanIndex = 0;
-      setInterval(() => {
-        scanIndex = (scanIndex + 1) % scanImages.length;
-        scanImage.src = scanImages[scanIndex];
-      }, 2000);
+      const scanImages = ["./Ballena3.png","./OctupusO3.png"];
+      let scanIndex=0;
+      setInterval(()=>{scanIndex=(scanIndex+1)%scanImages.length; scanImage.src=scanImages[scanIndex];},2000);
 
-      // Eventos A-FRAME globales
-      const sceneEl = document.querySelector("a-scene");
-      let arSystem;
+      const sceneEl=document.querySelector("a-scene"); let arSystem;
+      sceneEl.addEventListener("loaded",()=>{arSystem=sceneEl.systems["mindar-image-system"];});
+      sceneEl.addEventListener("arReady",()=>console.log("AR listo ✅"));
+      sceneEl.addEventListener("arError",(err)=>console.error("Error AR ❌",err));
 
-      sceneEl.addEventListener("loaded", () => {
-        arSystem = sceneEl.systems["mindar-image-system"];
-      });
-
-      sceneEl.addEventListener("arReady", () => {
-        console.log("AR está listo ✅");
-      });
-
-      sceneEl.addEventListener("arError", (err) => {
-        console.error("Error en AR ❌", err);
-      });
-
-      // Controles Start / Pause / Stop
-      document.querySelector("#btnStart").addEventListener("click", () => {
-        console.log("▶️ Iniciando AR");
-        arSystem.start();
-      });
-      document.querySelector("#btnPause").addEventListener("click", () => {
-        console.log("⏸ Pausando AR");
-        arSystem.pause();
-      });
-      document.querySelector("#btnStop").addEventListener("click", () => {
-        console.log("⏹ Deteniendo AR");
-        arSystem.stop();
-      });
+      document.querySelector("#btnStart").addEventListener("click",()=>arSystem.start());
+      document.querySelector("#btnPause").addEventListener("click",()=>arSystem.pause());
+      document.querySelector("#btnStop").addEventListener("click",()=>arSystem.stop());
     </script>
   </body>
 </html>
-
