--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
  <html>
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -97,33 +98,25 @@
 
       <a-camera position="0 0 0" look-controls="enabled: false"></a-camera>
 
-     <!-- Ballena -->
-<a-entity id="target-whale" mindar-image-target="targetIndex: 0">
-  <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" 
-    position="0 0.1 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
-    animation__updown="property: position; dir: alternate; dur: 2500; loop: true; easing: easeInOutSine; to: 0 0.3 0"
-    animation__spin="property: rotation; dur: 8000; loop: true; easing: linear; by: 0 360 0">
-  </a-entity>
-  <a-entity id="ballenaModel2" gltf-model="#WhaleModel2" 
-    position="0 0.15 0" rotation="0 90 0" scale="0.03 0.03 0.03" visible="false"
-    animation__updown="property: position; dir: alternate; dur: 2500; loop: true; easing: easeInOutSine; to: 0 0.35 0"
-    animation__spin="property: rotation; dur: 8000; loop: true; easing: linear; by: 0 360 0">
-  </a-entity>
-</a-entity>
+      <!-- Ballena -->
+      <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
+        <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" position="0 -0.1 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
+          animation__updown="property: position; to: 0 0 0; dur:2000; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear"></a-entity>
+        <a-entity id="ballenaModel2" gltf-model="#WhaleModel2" position="0 -0.1 0" rotation="0 90 0" scale="0.03 0.03 0.03" visible="false"
+          animation__updown="property: position; to: 0 0 0; dur:2000; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear"></a-entity>
+      </a-entity>
 
-<!-- Pulpo -->
-<a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
-  <a-entity id="pulpoModel1" gltf-model="#OctopusModel1" 
-    position="0 -0.1 0" rotation="0 90 0" scale="0.05 0.05 0.05" visible="true"
-    animation__updown="property: position; dir: alternate; dur: 2500; loop: true; easing: easeInOutSine; to: 0 0.15 0"
-    animation__spin="property: rotation; dur: 10000; loop: true; easing: linear; by: 0 360 0">
-  </a-entity>
-  <a-entity id="pulpoModel2" gltf-model="#OctopusModel2" 
-    position="0 -0.2 0" rotation="0 90 0" scale="0.07 0.07 0.07" visible="false"
-    animation__updown="property: position; dir: alternate; dur: 2500; loop: true; easing: easeInOutSine; to: 0 0.1 0"
-    animation__spin="property: rotation; dur: 10000; loop: true; easing: linear; by: 0 360 0">
-  </a-entity>
-</a-entity>
+      <!-- Pulpo -->
+      <a-entity id="target-octopus" mindar-image-target="targetIndex: 1">
+        <a-entity id="pulpoModel1" gltf-model="#OctopusModel1" position="0 -0.25 0" rotation="0 90 0" scale="0.05 0.05 0.05" visible="true"
+          animation__updown="property: position; to: 0 -0.05 0; dur:2500; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 360 0; dur:8000; loop:true; easing:linear"></a-entity>
+        <a-entity id="pulpoModel2" gltf-model="#OctopusModel2" position="0 -0.25 0" rotation="0 90 0" scale="0.07 0.07 0.07" visible="false"
+          animation__updown="property: position; to: 0 -0.05 0; dur:2500; dir:alternate; loop:true; easing:easeInOutSine"
+          animation__spin="property: rotation; to: 0 360 0; dur:8000; loop:true; easing:linear"></a-entity>
+      </a-entity>
     </a-scene>
 
     <script>
@@ -222,6 +215,10 @@
     </script>
   </body>
 </html>
+
+
+
+
 
 
 
