--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
       <!-- Ballena -->
       <a-entity id="target-whale" mindar-image-target="targetIndex: 0">
         <a-entity id="ballenaModel1" gltf-model="#WhaleModel1" 
-          position="0 0 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
-          animation__updown="property: position; dir:alternate; loop:true; dur:2000; easing:easeInOutSine; to: 0 0.2 0"
+          position="0 .2 0" rotation="0 90 0" scale="0.9 0.9 0.9" visible="true"
+          animation__updown="property: position; dir:alternate; loop:true; dur:2000; easing:easeInOutSine; to: 0 0.4 0"
           animation__spin="property: rotation; to: 0 450 0; dur:6000; loop:true; easing:linear">
         </a-entity>
 
