--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   </head>
   <body>
        <div id="scan-message">
-      Bsuca alguno de estos targets  y apunta tu cámara hacia las imágenes para comenzar
+      Bsuca alguno de estos targets y apunta tu cámara hacia ellos para comenzar
       <img id="scan-image" src="./Ballena3.png" alt="Target a escanear">
     </div>
 
     <div id="menu">
-       <!--<div id="fact-box">Selecciona un para ver curiosidades</div>-->
+       <div id="fact-box">Selecciona un para ver curiosidades</div>
       <div>
         <button id="btnPrev">⬅ Anterior</button>
         <button id="btnNext">➡ Siguiente</button>
@@ -226,4 +226,5 @@
     </script>
   </body>
 </html>
+
 
