--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
     </div>
 
     <div id="menu">
-       <div id="fact-box">Selecciona un para ver curiosidades</div>
+       <!--<div id="fact-box">Selecciona un para ver curiosidades</div>-->
       <div>
-        <button id="btnPrev">⬅ Anterior</button>
-        <button id="btnNext">➡ Siguiente</button>
+        <button id="btnPrev"> Anterior</button>
+        <button id="btnNext"> Siguiente</button>
       </div>
     </div>
 
     <div id="controls">
-      <button id="btnStart"> Start</button>
-      <button id="btnPause"> Pause</button>
-      <button id="btnStop"> Stop</button>
+      <button id="btnStart"> ▷ Start</button>
+      <button id="btnPause"> ❚❚ Pause</button>
+      <button id="btnStop"> ⊘ Stop</button>
     </div>
 
     <div id="model-switch"></div>
@@ -226,5 +226,6 @@
     </script>
   </body>
 </html>
+
 
 
