--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div id="menu">
-       <!--<div id="fact-box">Selecciona un para ver curiosidades</div>-->
+       <div id="fact-box">¿Sabias que?</div>
       <div>
         <button id="btnPrev"> Anterior</button>
         <button id="btnNext"> Siguiente</button>
@@ -226,6 +226,7 @@
     </script>
   </body>
 </html>
+
 
 
 
