--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <a-asset-item id="WhaleModel1" src="./Escena1_.glb"></a-asset-item>
         <a-asset-item id="WhaleModel2" src="./WhaleO3.glb"></a-asset-item>
         <!-- M _P -->
-        <a-asset-item id="OctopusModel1" src="./Octopus.glb"></a-asset-item>
+        <a-asset-item id="OctopusModel1" src="./Escena2.glb"></a-asset-item>
         <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
       </a-assets>
 
@@ -239,6 +239,7 @@
   </script>
   </body>
 </html>
+
 
 
 
