--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <a-assets>
         <!-- M_B -->
         <a-asset-item id="WhaleModel1" src="./Escena1_.glb"></a-asset-item>
-        <a-asset-item id="WhaleModel2" src="./WhaleO3.glb"></a-asset-item>
+        <a-asset-item id="WhaleModel2" src="./Escena4[1].glb"></a-asset-item>
         <!-- M _P -->
         <a-asset-item id="OctopusModel1" src="./Escena2.glb"></a-asset-item>
         <a-asset-item id="OctopusModel2" src="./Octopus(1).glb"></a-asset-item>
@@ -239,6 +239,7 @@
   </script>
   </body>
 </html>
+
 
 
 
